--- a/ConsoleHotKey/ConsoleHotKey.csproj
+++ b/ConsoleHotKey/ConsoleHotKey.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Desktop.cs" />
     <Compile Include="HotKeyManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
