--- a/ConsoleHotKey/ConsoleHotKey.csproj
+++ b/ConsoleHotKey/ConsoleHotKey.csproj
@@ -44,6 +44,7 @@
     <Compile Include="HotKeyManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WindowFinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gma.UserActivityMonitor\Gma.UserActivityMonitor.csproj">
