--- a/ConsoleHotKey/ConsoleHotKey.csproj
+++ b/ConsoleHotKey/ConsoleHotKey.csproj
@@ -51,6 +51,10 @@
       <Project>{f52aa97e-180a-40ed-8f2b-09080171d6c7}</Project>
       <Name>Gma.UserActivityMonitor</Name>
     </ProjectReference>
+    <ProjectReference Include="..\WM.Bar\WM.Bar.csproj">
+      <Project>{84695357-2791-49cc-845a-7933000a36e6}</Project>
+      <Name>WM.Bar</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
