Refractored project structure, made WM.Utils

--- a/WM.Bar/WM.Bar.csproj
+++ b/WM.Bar/WM.Bar.csproj
@@ -98,5 +98,11 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Gma.UserActivityMonitor\Gma.UserActivityMonitor.csproj">
+      <Project>{4738f0ca-8469-5357-2791-49cc7933000a}</Project>
+      <Name>Gma.UserActivityMonitor</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
