--- a/WM.Utils/WM.Utils.csproj
+++ b/WM.Utils/WM.Utils.csproj
@@ -49,11 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Binding.cs" />
     <Compile Include="ConfigurationManager.cs" />
     <Compile Include="GlobalConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StartupTask.cs" />
+    <Compile Include="Tasks\Binding.cs" />
+    <Compile Include="Tasks\StartupTask.cs" />
+    <Compile Include="Tasks\WMTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
