--- a/WM.Backend/WM.Backend.csproj
+++ b/WM.Backend/WM.Backend.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -52,9 +53,9 @@
       <Project>{4738f0ca-8469-5357-2791-49cc7933000a}</Project>
       <Name>Gma.UserActivityMonitor</Name>
     </ProjectReference>
-    <ProjectReference Include="..\WM.Bar\WM.Bar.csproj">
-      <Project>{84695357-2791-49cc-845a-7933000a36e6}</Project>
-      <Name>WM.Bar</Name>
+    <ProjectReference Include="..\WM.Utils\WM.Utils.csproj">
+      <Project>{6284e342-22d1-4c54-855f-d43ffc0035e9}</Project>
+      <Name>WM.Utils</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
