--- a/WM.Backend/WM.Backend.csproj
+++ b/WM.Backend/WM.Backend.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowFinder.cs" />
+    <Compile Include="WindowsMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gma.UserActivityMonitor\Gma.UserActivityMonitor.csproj">
