--- a/WM.Backend/WM.Backend.csproj
+++ b/WM.Backend/WM.Backend.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Output.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SysCommands.cs" />
     <Compile Include="WindowFinder.cs" />
     <Compile Include="WindowsMessage.cs" />
   </ItemGroup>
