--- a/WM.Backend/WM.Backend.csproj
+++ b/WM.Backend/WM.Backend.csproj
@@ -47,8 +47,11 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SysCommands.cs" />
+    <Compile Include="Tree.cs" />
+    <Compile Include="Window.cs" />
     <Compile Include="WindowFinder.cs" />
     <Compile Include="WindowsMessage.cs" />
+    <Compile Include="Workspace.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gma.UserActivityMonitor\Gma.UserActivityMonitor.csproj">
