--- a/WM.Utils/WM.Utils.csproj
+++ b/WM.Utils/WM.Utils.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6284E342-22D1-4C54-855F-D43FFC0035E9}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WM.Utils</RootNamespace>
     <AssemblyName>WM.Utils</AssemblyName>
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationManager.cs" />
-    <Compile Include="GlobalConfiguration.cs" />
+    <Compile Include="IConfigurationManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tasks\Binding.cs" />
     <Compile Include="Tasks\StartupTask.cs" />
