Added Data context and VMLocator

--- a/WM.UI/App.config
+++ b/WM.UI/App.config
@@ -8,7 +8,7 @@
 
     <log4net>
         <appender name="LogFileAppender" type="log4net.Appender.RollingFileAppender">
-            <param name="File" value="ExampleGUI.log" />
+            <param name="File" value="WmUI.log" />
             <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
             <appendToFile value="true" />
             <rollingStyle value="Size" />
@@ -25,7 +25,7 @@
             <appender-ref ref="LogFileAppender" />
         </root>
     </log4net>
-    
+
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
